feat: implement persistent logger management with authoritative state tracking
- Add persistent storage using homeassistant.helpers.storage.Store
- Implement startup restoration of managed logger levels
- Enhanced UX with comprehensive service documentation and examples
- Track managed loggers authoritatively rather than discovery approach
- Logger levels set via our service now persist across HA restarts
- Add persistence test documentation

Completes Milestone 5: UX Enhancement (Authoritative Logger Management)

--- a/custom_components/logger_manager/manifest.json
+++ b/custom_components/logger_manager/manifest.json
@@ -6,5 +6,6 @@
   "issue_tracker": "https://github.com/gunnjr/ha-logger-manager/issues",
   "requirements": [],
   "codeowners": ["@gunnjr"],
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "config_flow": false
 }
