--- a/custom_components/logger_manager/services.yaml
+++ b/custom_components/logger_manager/services.yaml
@@ -37,3 +37,7 @@ apply_levels:
         
         Mixed example:
         ["homeassistant.components.http", "custom_components.logger_manager", "homeassistant.core"]
+
+test_logger_discovery:
+  name: Test Logger Discovery
+  description: "[TEMPORARY] Validates logger discovery approach by analyzing Python's logging system. Creates sensor.logger_discovery_test with results and logs detailed analysis. Use this to verify UI foundation before development."
