feat: Implement WebSocket-based logger discovery service
- Extract working discovery logic from test service into reusable _discover_available_loggers function
- Add cache management with 30-minute TTL (_get_logger_cache, _update_logger_cache, _is_cache_valid)
- Implement websocket_get_loggers command with admin authentication and structured error responses
- Add refresh_logger_cache service for manual cache clearing
- Update test service to validate new discovery function and cache functionality
- Register WebSocket command and refresh service in async_setup
- Update services.yaml with refresh_logger_cache service documentation

This replaces the problematic sensor-based storage approach with a clean WebSocket API
that avoids database size limits while providing better separation of concerns."

--- a/custom_components/logger_manager/services.yaml
+++ b/custom_components/logger_manager/services.yaml
@@ -38,6 +38,10 @@ apply_levels:
         Mixed example:
         ["homeassistant.components.http", "custom_components.logger_manager", "homeassistant.core"]
 
+refresh_logger_cache:
+  name: Refresh Logger Cache
+  description: Manually refresh the cached list of available loggers used by the WebSocket API. The cache normally refreshes automatically every 30 minutes, but this service allows immediate refresh when needed (e.g., after installing new integrations).
+
 test_logger_discovery:
   name: Test Logger Discovery
   description: "[TEMPORARY] Validates logger discovery approach by analyzing Python's logging system. Creates sensor.logger_discovery_test with results and logs detailed analysis. Use this to verify UI foundation before development."
