--- a/custom_components/logger_manager/manifest.json
+++ b/custom_components/logger_manager/manifest.json
@@ -4,9 +4,9 @@
   "codeowners": ["@gunnjr"],
   "config_flow": true,
   "documentation": "https://github.com/gunnjr/ha-logger-manager",
-  "integration_type": "system",
+  "integration_type": "service",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/gunnjr/ha-logger-manager/issues",
   "requirements": [],
-  "version": "1.0.4"
+  "version": "1.0.5"
 }
